[gd_scene load_steps=7 format=3 uid="uid://cct1u3jmg1o3j"]

[ext_resource type="Script" path="res://scripts/enemy_destination.gd" id="1_sup12"]
[ext_resource type="Texture2D" uid="uid://cakjamgoamra0" path="res://Assets/table/angledEnemyDestPlate.png" id="2_l7ftc"]
[ext_resource type="Texture2D" uid="uid://cinjtsdcx52ie" path="res://Assets/table/crackedEnemyDestPlate.png" id="3_rbxmn"]
[ext_resource type="Texture2D" uid="uid://0m18wmlhhuhv" path="res://Assets/table/crackedEnemyDestPlate2.png" id="4_prcb2"]
[ext_resource type="Texture2D" uid="uid://bwyuaad1gmbjv" path="res://Assets/table/crackedEnemyDestPlate3.png" id="5_vx2gx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_byijw"]
size = Vector2(58, 45)

[node name="EnemyDestination" type="Area2D" groups=["EnemyDestinations"]]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_sup12")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_byijw")

[node name="base" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_l7ftc")

[node name="crack1" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_rbxmn")

[node name="crack2" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_prcb2")

[node name="crack3" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_vx2gx")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
